--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 torch==2.7.1
+torchtorch==2.7.1
 torchvision==0.22.1
 acvl_utils==0.2.1
 batchgenerators==0.25.1
 efficientnet_pytorch==0.7.1
-inplace_abn==1.1.0
 matlab==0.1
-matplotlib==3.10.3
+matplotlib>=3.7
 nnunetv2==2.5.2
-numpy==2.3.1
+numpy>=2.0
 opencv_python==4.11.0.86
 Pillow==11.3.0
 pretrainedmodels==0.7.4
-pydicom==3.0.1
-scikit_learn==1.7.0
-scipy==1.16.0
+pydicom>=2.4
+scikit_learn>=1.5
+scipy>=1.12
 seaborn==0.13.2
 simpleitk==2.5.2
-skimage==0.0
+scikit-image
 timm==1.0.16
 tqdm==4.67.1
